Filter() Method added

--- a/JSnack3/index.html
+++ b/JSnack3/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container" style="text-align: center; font-size: 3em;"></div>
+    <div id="containerForEach" style="font-size: 2em;">
+        <h1 style="text-align: center;">Metodo ForEach</h1>
+    </div>
+    <div id="containerFilter" style="font-size: 2em; margin-top: 50px;">
+        <h1 style="text-align: center;">Metodo Filter</h1>
+    </div>
     <script src="./asset/js/main.js"></script>
 </body>
 </html>
